compiler/toc_hir_lowering/tests/snapshots/lowering__lower_formals_use_name.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 59
expression: "type i : int proc u (j : i) end u"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(2)
    Module@(FileId(1), 0..33): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..33): []
        StmtItem@(FileId(1), 0..12): ItemId(0)
          Type@(FileId(1), 0..12): "i"@(FileId(1), 5..6)
            Primitive@(FileId(1), 9..12): Int
        StmtItem@(FileId(1), 13..33): ItemId(1)
          Subprogram@(FileId(1), 13..33): "u"@(FileId(1), 18..19) ["j"@(FileId(1), 21..22)]
            Alias@(FileId(1), 25..26): "i"@(FileId(1), 5..6), resolved(Type)
            Void@(FileId(1), 13..27)
            StmtBody@(FileId(1), 28..28): ["j"@(FileId(1), 21..22)]

