compiler/toc_hir_lowering/tests/snapshots/lowering__lower_function_def-7.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 59
expression: "\n    function pars() res : int\n        var res : int1\n    end pars"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(2)
    Module@(FileId(1), 0..66): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..66): []
        StmtItem@(FileId(1), 5..66): ItemId(1)
          Subprogram@(FileId(1), 5..66): "pars"@(FileId(1), 14..18) [] -> "res"@(FileId(1), 21..24)
            Primitive@(FileId(1), 27..30): Int
            StmtBody@(FileId(1), 39..53): [] -> "res"@(FileId(1), 21..24)
              StmtItem@(FileId(1), 39..53): ItemId(0)
                ConstVar@(FileId(1), 39..53): var "res"@(FileId(1), 43..46)
                  Primitive@(FileId(1), 49..53): Int1
error in file FileId(1) at 43..46: `res` is already declared in this scope
| note in file FileId(1) for 21..24: `res` previously declared here
| error in file FileId(1) for 43..46: `res` redeclared here

