compiler/toc_hir_lowering/tests/snapshots/lowering__lower_function_tys-2.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 59
expression: "type _ : function p1   (a : int) : string"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..41): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..41): []
        StmtItem@(FileId(1), 0..41): ItemId(0)
          Type@(FileId(1), 0..41): "_"@(FileId(1), 5..6)
            Function@(FileId(1), 9..41): [...]
              Primitive@(FileId(1), 28..31): Int
              Primitive@(FileId(1), 35..41): String

