compiler/toc_hir_lowering/tests/snapshots/lowering__lower_function_tys-3.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 59
expression: "type _ : function p2   (a : int, b : string) : addressint"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..57): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..57): []
        StmtItem@(FileId(1), 0..57): ItemId(0)
          Type@(FileId(1), 0..57): "_"@(FileId(1), 5..6)
            Function@(FileId(1), 9..57): [...]
              Primitive@(FileId(1), 28..31): Int
              Primitive@(FileId(1), 37..43): String
              Primitive@(FileId(1), 47..57): AddressInt

