compiler/toc_hir_lowering/tests/snapshots/lowering__lower_function_tys-4.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 59
expression: "type _ : function pisf (a : int, b : string, c : function _ () : int) : boolean"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..79): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..79): []
        StmtItem@(FileId(1), 0..79): ItemId(0)
          Type@(FileId(1), 0..79): "_"@(FileId(1), 5..6)
            Function@(FileId(1), 9..79): [...]
              Primitive@(FileId(1), 28..31): Int
              Primitive@(FileId(1), 37..43): String
              Function@(FileId(1), 49..68): [...]
                Primitive@(FileId(1), 65..68): Int
              Primitive@(FileId(1), 72..79): Boolean

